# Practice-C-Plus-Plus-Game-Engine

./: .gitignore  .gitmodules  CMakeLists.txt  CleanProjects.bat  GenerateMakefile.bat  GenerateProjects.bat  GenerateSolution.bat  README.md  premake5.lua
Engine/: CMakeLists.txt  premake5.lua
Engine/src/: Engine.h
Engine/src/Engine/include/: Application.h  Core.h  Engine.h  EntryPoint.h  Log.h  gepch.h
Engine/src/Engine/include/Core/: Application.h  Base.h  Log.h  Window.h
Engine/src/Engine/include/Events/: ApplicationEvent.h  Event.h  KeyEvent.h  MouseEvent.h
Engine/src/Engine/include/Platform/Windows/: WindowsWindow.h
Engine/src/Engine/src/: Application.cpp  Log.cpp
Engine/src/Engine/src/Core/: Application.cpp  Log.cpp
Engine/src/Engine/src/Platform/Windows/: WindowsWindow.cpp
Game-1/: CMakeLists.txt  premake5.lua
Game-1/src/: Game.cpp
Game-2/: CMakeLists.txt  premake5.lua
Sandbox/: CMakeLists.txt  premake5.lua
Sandbox/src/: Sandbox.cpp
